--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
     <meta charset="utf-8">
     <title>Hello wasm-pack!</title>
   </head>
   <body>
+    <pre id="root"></pre>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script type="module" src="./src/main.tsx"></script>
   </body>
